src/objects/Apttus__RetentionPolicy__c.object
<CustomObject>
    <description>Holds object retention policies</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the policy is active. Inactive policies are ignored.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The business object governed by the policy</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                    <default>true</default>
                    <label>Apttus__APTS_Agreement__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Description of the policy</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EditSpec__c</fullName>
        <description>&quot;Edit Spec&quot; custom button</description>
        <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__RetentionPolicyEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_EditSpec&quot;, &quot;Edit Spec&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Spec</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PolicySpec__c</fullName>
        <description>The policy specification</description>
        <label>Policy Spec</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>The policy sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Retention Policy</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Sequence__c</columns>
        <columns>Apttus__BusinessObject__c</columns>
        <columns>Apttus__Description__c</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__PolicySpec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retention Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>